fix: validation and responses
